# MiniMirror

./: .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  MiniMirror.cpp  MiniMirror.h  README.md
engine/: CMakeLists.txt
engine/asset/: CMakeLists.txt
engine/asset/standard/shader/utils/: pre_header.glsl  register.glsl
engine/config/: CMakeLists.txt
engine/config/Debug/: init_config.ini.in
engine/config/Debug/asset/standard/shader/utils/: pre_header.glsl.in
engine/config/Debug/script/cmake/: hardware_info.cmake.in
engine/config/Release/: init_config.ini.in
engine/source/: CMakeLists.txt
engine/source/editor/: CMakeLists.txt  MiniMirror.cpp  MiniMirror.h
engine/source/runtime/: CMakeLists.txt
engine/source/runtime/core/color/: color.cpp  color.h
engine/source/runtime/core/log/: exception_description.cpp  exception_description.h  log_system.cpp  log_system.h
engine/source/runtime/core/manager/: ManagedObjectBase.cpp  ManagedObjectBase.h  ManagedObjectHandler.cpp  ManagedObjectHandler.h  ManagedObjectList.cpp  ManagedObjectList.h  ManagedObjectMap.cpp  ManagedObjectMap.h  ManagedObjectSet.cpp  ManagedObjectSet.h  ManagedObjectTableBase.cpp  ManagedObjectTableBase.h  ManagedObjectUnorderedMap.cpp  ManagedObjectUnorderedMap.h  ManagedObjectUnorderedSet.cpp  ManagedObjectUnorderedSet.h  ManagedObjectUnordered_map.cpp  ManagedObjectUnordered_map.h  ManagedObjectVector.cpp  ManagedObjectVector.h  ManagerBase.cpp  ManagerBase.h  import_other_system.h  pre_header.h  utils.cpp  utils.h
engine/source/runtime/core/math/: definition.cpp  definition.h  math.cpp  math.h  pre_header.h  random.cpp  random.h  transform.cpp  transform.h  utils.cpp  utils.h
engine/source/runtime/core/reflection/: accessor.h  constructor.cpp  constructor.h  database.cpp  database.h  destructor.cpp  destructor.h  macro.h  meta.cpp  meta.h  meta_type.cpp  meta_type.h  method.cpp  method.h  property.cpp  property.h  reflaction.cpp  reflection.cpp  reflection.h  registration.cpp  registration.h  type.cpp  type.h  utils.cpp  utils.h  variable.cpp  variable.h
engine/source/runtime/core/task_flow/: task_flow.cpp  task_flow.h
engine/source/runtime/core/task_system/: pre_header.h  task_system.cpp  task_system.h
engine/source/runtime/function/render/: AllocatedBuffer.cpp  AllocatedBuffer.h  AllocatedImage.cpp  AllocatedImage.h  AllocatedMesh.cpp  AllocatedMesh.h  AllocatedMeshBuffer.cpp  AllocatedMeshBuffer.h  CommandExecutor.cpp  CommandExecutor.h  CommandTask.cpp  CommandTask.h  CommandTaskFlow.cpp  CommandTaskFlow.h  ConstantsData.h  DescriptorManager.cpp  DescriptorManager.h  ElementBuffer.cpp  ElementBuffer.h  FrameBuffer.cpp  FrameBuffer.h  MeshBufferChunkUseInfo.cpp  MeshBufferChunkUseInfo.h  MeshBufferManager.cpp  MeshBufferManager.h  PipelineLayout.cpp  PipelineLayout.h  RenderBufferManager.cpp  RenderBufferManager.h  RenderDataAttributeID.h  RenderFuture.cpp  RenderFuture.h  RenderImageManager.cpp  RenderImageManager.h  RenderPass.cpp  RenderPass.h  RenderPassAttachmentDescription.cpp  RenderPassAttachmentDescription.h  RenderPipeline.cpp  RenderPipeline.h  (+44 more)
engine/source/runtime/platform/base/: MMObject.cpp  MMObject.h  cross_platform_header.h  error.cpp  error.h
engine/source/runtime/platform/config_system/: config_system.cpp  config_system.h
engine/source/runtime/platform/cross_platform_header/: cross_platform_header.h
engine/source/runtime/platform/file_system/: file_system.cpp  file_system.h
engine/source/runtime/resource/asset_system/: AssetManager.cpp  AssetManager.h  AssetSystem.cpp  AssetSystem.h  asset_system.cpp  asset_system.h  import_other_system.h
engine/source/runtime/resource/asset_system/asset_type/: Combination.cpp  Combination.h  Common.cpp  Common.h  Image.cpp  Image.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  image.cpp  image.h  mesh.cpp  mesh.h
engine/source/runtime/resource/asset_system/asset_type/base/: asset_base.cpp  asset_base.h  asset_type_define.h  bounding_box.cpp  bounding_box.h  vertex.cpp  vertex.h
engine/source/runtime/resource/asset_type/: asset_type.cpp  asset_type.h  image.cpp  image.h  mesh.cpp  mesh.h
engine/source/runtime/resource/asset_type/base/: asset_base.cpp  asset_base.h  asset_data.cpp  asset_data.h  asset_type_define.h  bounding_box.cpp  bounding_box.h  import_other_system.h  vertex.cpp  vertex.h
engine/source/utils/: CMakeLists.txt  ConcurrentHashTable.cpp  ConcurrentHashTable.h  DataAttributeID.cpp  DataAttributeID.h  ID.cpp  ID.h  Json.cpp  Json.h  error.cpp  error.h  hash_table.cpp  hash_table.h  marco.h  shaderc.cpp  shaderc.h  type_trait.cpp  type_trait.h  type_utils.h  utils.cpp  utils.h  uuid.cpp  uuid.h
script/cmake/: hardware_info.cmake  utils.cmake
script/python/: config_cmake.py  utils.py
test/: CMakeLists.txt
test/config/Release/: init_config.ini
test/runtime/: CMakeLists.txt
test/runtime/core/manager/: list_test.cpp  manager_base_test.cpp  map_test.cpp  set_test.cpp  unordered_map_test.cpp  unordered_set_test.cpp
test/runtime/core/reflection/: reflection_meta.cpp  reflection_method.cpp  reflection_property.cpp  reflection_test.cpp  reflection_type.cpp  reflection_variable.cpp
test/runtime/platform/config_system/: config_system_test.cpp
test/runtime/platform/file_system/: file_system_test.cpp
test/runtime/resource/asset_system/: asset_system_test.cpp  asset_type_test.cpp
test/test_file/asset_system/: combination1.json  combination2.json  combination3.json  combination4.json  model.fbx
test/test_file/config/: init_config.ini
test/utils/: CMakeLists.txt  concurrent_hash_table_test.cpp  error_test.cpp  hash_table_test.cpp  utils.cpp  utils_test.cpp  uuid_test.cpp
