cmake_minimum_required(VERSION 3.8)

project("MiniMirror")

option(MM_ENABLE_TEST "Whether to open unit test." ON)
if (${CMAKE_BUILD_TYPE} STREQUAL "Debug")
    option(MM_CHECK_PARAMETERS "Check some function parameters" ON)
    option(MM_CHECK_ALL_EXCEPTION_PROCESS "Check all exception process" ON)
else ()
    option(MM_CHECK_PARAMETERS "Check some function parameters" OFF)
    option(MM_CHECK_ALL_EXCEPTION_PROCESS "Check all exception process" OFF)
endif ()

if (WIN32)
    set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS on)
endif ()

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/script/cmake")
set(CMAKE_BINARY_DIR "${CMAKE_CURRENT_SOURCE_DIR}/build/${CMAKE_CXX_COMPILER_ID}/${CMAKE_BUILD_TYPE}")
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/bin")
set(CMAKE_EXPORT_COMPILE_COMMANDS on)

set(version_major "0")
set(version_minor "1")
set(version_patch "1")

set(source_engine_dir "${CMAKE_CURRENT_SOURCE_DIR}/engine")
set(source_third_party_dir "${source_engine_dir}/3rd_party")
set(source_asset_dir "${source_engine_dir}/asset")
set(source_asset_dir_std "${source_asset_dir}/standard")
set(source_asset_dir_user "${source_asset_dir}/user")
set(source_config_dir "${source_engine_dir}/config/${CMAKE_BUILD_TYPE}")
set(engine_dir "${CMAKE_BINARY_DIR}")
set(bin_dir "${CMAKE_RUNTIME_OUTPUT_DIRECTORY}")
set(script_dir "${CMAKE_CURRENT_SOURCE_DIR}/script")
set(asset_dir "${engine_dir}/asset")
set(asset_dir_cache "${asset_dir}/.cache")
set(asset_dir_std "${asset_dir}/standard")
set(asset_dir_user "${asset_dir}/user")
set(config_dir "${engine_dir}/config")

file(RELATIVE_PATH relative_asset_dir "${bin_dir}" "${asset_dir}")
file(RELATIVE_PATH relative_asset_dir_cache "${bin_dir}" "${asset_dir_cache}")
file(RELATIVE_PATH relative_asset_dir_std "${bin_dir}" "${asset_dir_std}")
file(RELATIVE_PATH relative_asset_dir_user "${bin_dir}" "${asset_dir_user}")
file(RELATIVE_PATH relative_config_dir "${bin_dir}" "${config_dir}")

execute_process(COMMAND python3 ${script_dir}/python/config_cmake.py --cmake_config_system_info_file_in ${source_config_dir}/script/cmake/hardware_info.cmake.in --cmake_config_system_info_file_out ${script_dir}/cmake/hardware_info.cmake)

add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/engine")

if (MM_ENABLE_TEST)
    set(engine_dir_test "${engine_dir}")
    add_subdirectory("${CMAKE_CURRENT_SOURCE_DIR}/test")
endif ()
